suite grafana prometheus and alertmanager

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .DS_Store
 data/grafana/*
 !data/grafana/.gitkeep
+data/alertmanager/*
+!data/alertmanager/.gitkeep
+data/prometheus/*
+!data/prometheus/.gitkeep
