--- a/prometheus/config/prometheus.yml
+++ b/prometheus/config/prometheus.yml
@@ -28,3 +28,11 @@ scrape_configs:
     static_configs:
       - targets: 
         - "prometheus:9090"
+  - job_name: "node_exporter"
+
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+
+    static_configs:
+      - targets: 
+        - "nodeexporter:9100"
