--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ GRAFANA_VERSION=latest
 PROMETHEUS_VERSION=latest
 ALERTMANAGER_VERSION=latest
 NODEEXPORTER_VERSION=latest
+LOKI_VERSION=latest
+PROMTAIL_VERSION=latest
+MINIO_VERSION=latest
+NGINX_VERSION=latest
