--- a/nginx/config/conf.d/grafana.conf
+++ b/nginx/config/conf.d/grafana.conf
@@ -1,9 +1,23 @@
 server {
-  listen        80;
+
+  listen 80 ;
+  server_name grafana.balsain.local;
+  return 301 https://$host$request_uri;
+
+}
+
+server {
+  listen        443 ssl;
   server_name   grafana.balsain.local;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+  ssl_certificate     ./cert/wildcard.crt;
+  ssl_certificate_key ./cert/wildcard.key;
 
   location / {
     proxy_pass  http://grafana:3000;
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 }
